# training

./: .gitignore
c/cmake-study/: CMakeLists.txt  Makefile
c/cmake-study/src/: client.c  main.c
c/linux/: client  client.c  epoll_socket.c  web_server.c
c/mac/: echo_server.c  main.c
c/vs_iocp/: main.c  vs_iocp.sln  vs_iocp.vcxproj  vs_iocp.vcxproj.filters  win_iocp.c
c/vs_iocp/Debug/: vc142.idb  vs_iocp.ilk
rust/city-pop/: Cargo.toml
rust/city-pop/src/: main.rs
rust/mac_socket/: Cargo.toml
rust/mac_socket/src/: main.rs
rust/nest/: Cargo.toml
rust/nest/src/: config.rs  error.rs  lib.rs  nest.rs  sys.rs
rust/nest/test/: test.rs
rust/rust-study/: Cargo.toml  file_test.txt  question.md
rust/rust-study/src/: concurrency.rs  conditional.rs  dining_game.rs  error_handler.rs  guessing_game.rs  iterators.rs  main.rs  method_syntax.rs  mutability.rs  ownership.rs  syntax_base.rs  trait_objects.rs  traits.rs  unit_test.rs
rust/rust-study/tests/: test.rs  test_unit_test.rs
rust/stain/: Cargo.toml
rust/stain/src/: lib.rs
rust/stdtest/: Cargo.toml
rust/stdtest/src/: envs.rs  main.rs
rust/template/: Cargo.toml
rust/template/src/: html_list.rs  main.rs
rust/trains/: Cargo.toml
rust/trains/src/: addr.rs  epoll.rs  epoll_socket.rs  fork_socketpair.rs  main.rs  (+2 more)
rust/web/: Cargo.toml
rust/win/: Cargo.toml
rust/win_iocp/: Cargo.toml
rust/win_iocp/examples/: multiple_threads.rs  size_test.rs  socket_iocp.rs
rust/win_iocp/src/: consts.rs  context.rs  event.rs  ffi.rs  iocp.rs  ip.rs  main.rs  os.rs  process.rs  sock_addr.rs  socket.rs
(+61 files in other folders)
