[package]
name = "template"
version = "0.1.0"
authors = ["Haiwei LI <haiweili@unity3d.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.1.9"
serde = { version = "1.0.97", default-features = false, features = ["derive"] }
serde_json = "1.0.40"