[package]
name = "win_iocp"
version = "0.1.0"
authors = ["Neal LI <haiwei8086@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.60"


[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.7", features = ["sysinfoapi", "consoleapi", "handleapi", "processthreadsapi", "synchapi", "wincon", "winuser", "winioctl", "winsock2"] }